# Cpp-Project-Template

./: .gitignore  projectMaker.sh
_cpp_template/: CMakeLists.txt  README.md
_cpp_template/src/: main.cpp
